@@ -1,7 +1,6 @@
 TODO
 
 v0.1
-- correct barrier placement
 - correct curb placement
 - correct side widths
 - correct height
