@@ -1,3 +1,4 @@
 v0.1
 - correct length (2092 m)
-    
+- correct barrier placement
+
